[package]
name = "si_py_sens_be"
version = "0.1.0"
authors = ["Wolfgang Ginolas <wolfgang.ginolas@gwif.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
hex = "0.4"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["sqlite_pool"]

[dependencies.rusqlite]
version = "0.14.0"
features = ["bundled"]